<resources>
    <string name="app_name">AnToanBMTT</string>
    <string name="login_page_title">Log in</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login_btn">Log in</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="sign_up_page_title">Sign up</string>
    <string name="Name_field">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home_nav_title">Home</string>
    <string name="cloud_storage_nav_title">Cloud storage</string>
    <string name="shared_folder_nav_title">Share</string>
    <string name="image_nav_title">Image</string>
    <string name="my_account_nav_view_title">My account</string>
    <string name="recycle_bin_nav_view_title">Recycle bin</string>
    <string name="settings_nav_view_title">Settings</string>
    <string name="drawer_user_info_user_icon">User icon</string>
    <string name="search_label">Search</string>
    <string name="username_edit_text_label">Username</string>
    <string name="username_text_input_helper_text">Username can\'t be empty</string>
    <string name="password_text_input_helper_text">Password can\'t be empty</string>
    <string name="confirm_password_text_input_helper_text">Confirm password can\'t be empty</string>
    <string name="email_text_input_helper_text">Email can\'t be empty</string>
    <string name="confirm_password_not_match">Password not match</string>
    <string name="load_error">Load error</string>
    <string name="logout_message">Do you really want to logout?</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes_label">Yes</string>
    <string name="delete_message">Do you really want to delete this item?</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="delete_item">Delete item</string>
    <string name="change_name">Change name</string>
    <string name="move_to_bin">Move to bin</string>
    <string name="move_to_bin_warning">Do you really want to move this item to bin?</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>